# TextEngine

./: BuildList.cmake  CMakeLists.txt  README.md  TODO.md  Windows.cmake  cleanup.sh  main.cpp  rebuild.bat
include/: CCanvas.hpp  CCharacter.hpp  CFont.hpp  CGame.hpp  CTextBuffer.hpp  NEngine.hpp  SFont.hpp
shaders/: text.frag  text.vert
src/: 1.lvl  CCanvas.cpp  CCanvas.hpp  CCharacter.cpp  CCharacter.hpp  CFont.cpp  CFont.hpp  CGame.cpp  CGame.hpp  CTextBuffer.cpp  CTextBuffer.hpp  Makefile  SFont.cpp  TextEngine.cpp  TextEngine.h  TextObject.cpp  TextObject.h  levels.list  main.cpp  scratch.lvl  test.lvl
